--- a/canvasDrag/index.html
+++ b/canvasDrag/index.html
@@ -26,8 +26,8 @@
       cursor: pointer;
       color: #1DA57A;
     }
- </style>
- <title>canvas图片旋转缩放拖拽</title>
+  </style>
+  <title>canvas图片旋转缩放拖拽</title>
  </head>
   <body>
     <canvas id="canvas"></canvas>
@@ -39,6 +39,6 @@
       <a id="leftRotate">点击左旋</a>
       <a id="rightRotate">点击右旋</a>
     </div>
-   <script type="text/javascript" src="test.js"></script>
+   <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
