--- a/图片拖拽/canvas实现/index.html
+++ b/图片拖拽/canvas实现/index.html
@@ -6,7 +6,7 @@
   <style>
     canvas {
       display: block;
-      border: 1px solid #eee;
+      border: 1px solid #1da573;
       margin: 10px auto;
     }
     .button-group {
@@ -24,7 +24,7 @@
     }
     .button-group a:hover {
       cursor: pointer;
-      color: #1DA57A;
+      color: #1da57a;
     }
   </style>
   <title>canvas图片旋转缩放拖拽</title>
@@ -39,6 +39,7 @@
       <a id="leftRotate">点击左旋</a>
       <a id="rightRotate">点击右旋</a>
     </div>
+    <div class="back-home"><a href="../../index.html">返回首页</a></div>
    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
