--- a/图片拖拽/css实现/index.html
+++ b/图片拖拽/css实现/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <div id="imgContainer">
-      <img id="img" src="../img/img0.png" class="img" />
+      <img id="img" src="../img/1.png" class="img" />
     </div>
     <div class="operator-group">
       <button class="button" id="leftBtn">向左转</button>
