--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
             <a href="./自适应瀑布/index.html">自适应瀑布</a>
           </div>
         </div>
+        <div>
+          <div class="item-nav">
+            <a href="./css3D/index.html">css3D效果</a>
+          </div>
+        </div>
       </div>
       <div class="item">
         <div class="item-title">js挡</div>
